--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -30,7 +30,7 @@
   <link href="https://fonts.googleapis.com/css2?family={{ settings.heading_font | replace: ' ', '+' }}:wght@400;500;600;700&family={{ settings.body_font | replace: ' ', '+' }}:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Favicon -->
-  {{ 'favicon.ico' | asset_url | favicon_tag }}
+  <link rel="icon" type="image/x-icon" href="//buisbuz.com/cdn/shop/t/12/assets/favicon.ico?55">
 
   <!-- Preload critical resources -->
   <link rel="preload" href="{{ 'theme.js' | asset_url }}" as="script">
