--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -18,10 +18,17 @@
                 <p class="author">by {{ product.metafields.custom.author }}</p>
               {% endif %}
               <p class="price">{{ product.price | money }}</p>
-              <form method="post" action="/cart/add">
-                <input type="hidden" name="id" value="{{ product.variants.first.id }}">
-                <button type="submit" class="btn">Add to Cart</button>
-              </form>
+              <div class="product-actions">
+                <form method="post" action="/cart/add" style="display: inline;">
+                  <input type="hidden" name="id" value="{{ product.variants.first.id }}">
+                  <button type="submit" class="btn">Add to Cart</button>
+                </form>
+                <form method="post" action="/cart/add" style="display: inline; margin-left: 5px;">
+                  <input type="hidden" name="id" value="{{ product.variants.first.id }}">
+                  <input type="hidden" name="return_to" value="/checkout">
+                  <button type="submit" class="btn btn-buy-now">Buy Now</button>
+                </form>
+              </div>
             </div>
           </a>
         </div>
